--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,16 @@
-cmake_minimum_required(VERSION 3.25)
-project(Autoclicker LANGUAGES CXX)
+cmake_minimum_required(VERSION 3.22)
+project(sfml)
 
-set(CMAKE_CXX_STANDARD 23)
-set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++ -static -lpthread")
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_FLAGS_RELEASE "-Ofast")
+set(CMAKE_EXE_LINKER_FLAGS "-static -static-libgcc -static-libstdc++")
 
-include(FetchContent)
-FetchContent_Declare(
-    SFML
-    GIT_REPOSITORY https://github.com/SFML/SFML.git
-    GIT_TAG 2.6.x)
-FetchContent_MakeAvailable(SFML)
+set(SFML_STATIC_LIBRARIES TRUE)
+set(SFML_DIR "SFML-2.5.1/lib/cmake/SFML")
 
-add_executable(main main.cpp)
-target_link_libraries(main PRIVATE sfml-graphics)
-target_compile_features(main PRIVATE cxx_std_17)
+
+find_package(SFML COMPONENTS graphics audio REQUIRED)
+
+add_executable(autoclicker main.cpp)
+
+target_link_libraries(autoclicker sfml-graphics sfml-audio)
